# auto_scanning_ros2

./: Readme.md  start_auto_scanning.sh  start_sim.sh
data/aligned_point_cloud/: final_aligned_cloud_1750802518.989.pcd
data/merged_point_cloud/: merged_point_cloud_1750802236.332.pcd  merged_point_cloud_1750802446.967.pcd
docker/: Dockerfile  docker-compose.yml
src/auto_scanning/: CMakeLists.txt  Readme.md  package.xml
src/auto_scanning/config/: config.yaml
src/auto_scanning/launch/: auto_scanning.launch.py
src/auto_scanning/src/: align_merged_clouds_node.cpp  auto_scanning_client.cpp  auto_scanning_server.cpp  pointcloud_merger_node.cpp
src/deburring_robot_bringup/: CMakeLists.txt  package.xml
src/deburring_robot_bringup/launch/: handeye_calibration.launch.py  simulated_robot.launch.py
src/deburring_robot_controller/: CMakeLists.txt  package.xml
src/deburring_robot_controller/config/: iiwa_controllers.yaml
src/deburring_robot_controller/launch/: controller.launch.py
src/deburring_robot_description/: CMakeLists.txt  package.xml
src/deburring_robot_description/gazebo/RGBD_camera/: camera_gazebo.xacro
src/deburring_robot_description/gazebo/iiwa14/: iiwa_gazebo.xacro
src/deburring_robot_description/launch/: display.launch.py  gazebo.launch.py
src/deburring_robot_description/meshes/RGBD_camera/: PRO_S.STL  iiwa_adapter.STL
src/deburring_robot_description/urdf/: iiwa_with_rgbd.urdf.xacro
src/deburring_robot_description/urdf/RGBD_camera/: camera.xacro
src/deburring_robot_description/urdf/iiwa14/: iiwa14.xacro  iiwa14_ros2_control.xacro
src/deburring_robot_gazebo/: CMakeLists.txt  package.xml
src/deburring_robot_gazebo/launch/: rotate_model.launch.py
src/deburring_robot_gazebo/src/: set_model_pose_node.cpp
src/deburring_robot_gazebo/worlds/: handeye_calibration.sdf  shark.sdf  teapot.sdf
src/deburring_robot_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/deburring_robot_moveit_config/config/: iiwa_with_rgbd.ros2_control.xacro  iiwa_with_rgbd.srdf  iiwa_with_rgbd.urdf.xacro  initial_positions.yaml  moveit.rviz  moveit_controllers.yaml
src/deburring_robot_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/deburring_robot_msgs/: CMakeLists.txt  package.xml
src/deburring_robot_msgs/action/: AutoScanning.action
src/handeye_calibration/: CMakeLists.txt  Readme.md  package.xml
src/handeye_calibration/config/: camera_info.yaml  config.yaml
src/handeye_calibration/data/: handeye_result.yaml  handeye_samples.yaml
src/handeye_calibration/launch/: handeye_calibration.launch.py
src/handeye_calibration/src/: handeye_estimation_client.cpp  handeye_estimation_server.cpp  handeye_solver.cpp
